--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 <div class="video-wrapper">
   <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/gSc0174IL_o?si=XH3lHllAM0a_C2dU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/N0p9x8jGHZk?si=P1iaWgmT28jwpD8K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </div>
 
